# OfferPilot

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.en.md  README.md  README_EN.md  docker-compose.yml  pyproject.toml
backend/: .dockerignore  Dockerfile  boss_login.py  demo_walkthrough.py  mcp_boss_acceptance.py  mcp_boss_smoke.py  requirements.txt  smoke_check.py
backend/app/: agent_events.py  boss_chat_service.py  boss_chat_workflow.py  boss_scan.py  boss_workflow.py  company_intel_service.py  email_fetch.py  email_heartbeat.py  email_notify.py  email_workflow.py  form_autofill.py  form_fill_workflow.py  interview_prep_service.py  main.py  material_export.py  material_service.py  material_workflow.py  production_guard.py  schemas.py  skill_loader.py  storage.py  tz.py  vector_store.py  web_search_service.py  workflow.py
backend/mcp_servers/: __init__.py  (+5 more)
config/: evolution_rules.json  mcp_servers.yaml  policy_rules.json  router_rules.json  soul.yaml
docs/: Pulse-AgentRuntime设计.md  README.md
frontend/: .dockerignore  Dockerfile  next.config.ts  package-lock.json  package.json
infra/: docker-compose.yml
scripts/: _audit_last_turn.py  _boss_login_impl.py  boss-login.sh  boss_mcpctl.sh  clawhub_sync.sh  demo_record_prep.sh  offerpilotctl.sh  openclaw-logging-setup.sh  openclaw_heartbeat_setup.sh  pulsectl.sh  setup-pg.sh  setup.sh  skills_release_prep.sh  smoke_router_priority.py  start.sh  start_backend.sh  start_backend_only.sh  start_frontend.sh  sync_skills_to_openclaw_workspace.sh
tests/: conftest.py  test_p0_integration.py
(+279 files in other folders)
