[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pulse-agent"
version = "0.1.0"
description = "Pulse personal agent platform"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Pulse Contributors" }
]
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.6.0",
  "langchain-core>=0.3.0",
  "langchain-openai>=0.2.0",
]

[project.scripts]
pulse = "pulse.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["pulse*"]
